--- a/atividadeApp/atividadeApp.csproj
+++ b/atividadeApp/atividadeApp.csproj
@@ -58,6 +58,9 @@
 	  <MauiXaml Update="CadastrarPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Editar.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
